<resources>
    <string name="available">Available</string>
    <string name="in_progress">In Progress</string>
    <string name="my_wallet">My Wallet</string>
    <string name="daily_rewards">Get Daily Reward</string>
    <string name="popular">Popular</string>
    <string name="quick_deals">Quick Deals</string>
    <string name="flash_offer">Flash Offer</string>
    <string name="semi_column">:</string>
    <string name="i_have_question">I Have A Question</string>
    <string name="earn">Earn</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="wallet">Wallet</string>
    <string name="current_balance">Current Balance</string>
    <string name="completed">Completed</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="request_payout">Request Payout</string>
    <string name="payout">Payout</string>
    <string name="question">Questions?</string>
    <string name="earn_more_reward">Earn more rewards</string>
    <string name="try_enjoy">Try &amp; Enjoy</string>
    <string name="follow_us_on">Follow us on :</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="setting">Settings</string>
    <string name="get_ans_abt_ques">Get answer about the app</string>
    <string name="questions">Questions ?</string>
    <string name="love_the_app">Love the app?</string>
    <string name="your_opinion_matters">Your opinion matters</string>
    <string name="have_a_feedback">Have a feedback?</string>
    <string name="send_us_a_msg">Send us a message</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_payouts">My Payouts</string>
    <string name="request_payout_to_appear">Request a payout to appear in the list.</string>
    <string name="start_one_of_the_available_reward">Start one of the available rewards and track your progress on this screen</string>
    <string name="welcome_to">Welcome To</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="agree_to_terms_condition">I agree to Cent4Free’s</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="by_tapping">By tapping Verify Phone Number an SMS may be sent.</string>
    <string name="we_have_sent_phone_number">We have sent you an SMS with a code to the</string>
    <string name="didnt_receive_code">If you didn’t receive code? </string>
    <string name="resend">Resend</string>
    <string name="otp_time_remaining">OTP TIME REMANING</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="no_internet">No internet Connection</string>
    <string name="hint_questions">Questions</string>
    <string name="faq">FAQ</string>
    <string name="history">History</string>
    <string name="payouts">My Payouts</string>
    <string name="balance">Balance</string>
    <string name="hint_location_permission_needed">Location Permission Needed</string>
    <string name="hint_local_permission_message">This app needs the Location permission, please accept to use location functionality</string>
    <string name="hint_ok">OK</string>
    <string name="need">Need Permission</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="dialogMessage">Cent4Free needs permission to use location for giving you nearby offers</string>
    <string name="send_us_feedback">SEND US YOUR FEEDBACK!</string>
    <string name="do_you_have_suggestion">Do you have a suggestion or found some bug?</string>
    <string name="let_me_know_field_below">let us know in the fields below.</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="subject">Subject</string>
    <string name="describe">Describe</string>
    <string name="ent_name">Enter Name*</string>
    <string name="ent_email">Enter Email*</string>
    <string name="ent_subject">Enter Subject*</string>
    <string name="ent_describe">Enter Description*</string>
    <string name="upload_image">Upload Image</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="points">Points</string>
    <string name="save">Save</string>
    <string name="step_to_avail_offer">Steps to avail offer</string>
    <string name="note">*Note :</string>
    <string name="step_earn_reward">Steps to Earn reward</string>
    <string name="account">Account</string>
    <string name="others">Others</string>
    <string name="my_profile">My Profile</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="social">Social</string>
    <string name="profile">Profile</string>
    <string name="rewards">Rewards</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="birth_date">Birthdate*</string>
    <string name="gender">Gender*</string>
    <string name="last_name">Last Name*</string>
    <string name="sel_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="get_otp">Get OTP</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">com.app.cent4free</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="err_ent_phone_number">Enter phone number</string>
    <string name="err_ent_otp">Enter OTP</string>
    <string name="error_available">No Offers available currently, Stay tuned! We will come up with new exciting offers soon.</string>
    <string name="error_in_progress">Start one of the available reward and track your progress on this screen.</string>
    <string name="error_offer_details">Unable to show details now, please come back later.</string>
    <string name="error_leader_board">Unable to show leader board now, please come back later.</string>
    <string name="open">OPEN</string>
    <string name="join_telegram">Join us on Telegram</string>
    <string name="first_name">First Name*</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_register_up_with">Or Register Up With Us</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account">"Don't have an account?"</string>
    <string name="ent_old_password">Enter Old Password</string>
    <string name="ent_new_password">Enter New Password</string>
    <string name="ent_password">Enter Password</string>
    <string name="invalid_old_pwd_length">Old Password should not be less than 6 characters</string>
    <string name="invalid_new_pwd_length">New Password should not be less than 6 characters</string>
    <string name="invalid_pwd_length">Password should not be less than 6 characters</string>
    <string name="invalid_confirm_pwd_length">Confirm Password should not be less than 6 characters</string>
    <string name="ent_confirm_password">Enter Confirm Password</string>
    <string name="pwd_does_not_match">Password and Confirm Password does not match</string>
    <string name="pwd_cannot_not_match">Old Password and New Password Cannot be same</string>
    <string name="ent_first_name">Enter First Name</string>
    <string name="ent_last_name">Enter Last Name</string>
    <string name="invalid_email">Invalid Email Id</string>
    <string name="kindly_agree_tnc">Kindly Agree Terms &amp; Conditions</string>
    <string name="mandatory_mark"><font fgcolor='#D92249'>*</font></string>
    <string name="mandatory_email_id">Email Id<font fgcolor='#D92249'>*</font></string>
    <string name="referral_code">Referral Code(Optional)</string>
    <string name="mandatory_password">Password<font fgcolor='#D92249'>*</font></string>
    <string name="mandatory_new_password">New Password<font fgcolor='#D92249'>*</font></string>
    <string name="mandatory_old_password">Old Password<font fgcolor='#D92249'>*</font></string>
    <string name="mandatory_first_name">First Name<font fgcolor='#D92249'>*</font></string>
    <string name="mandatory_last_name">Last Name<font fgcolor='#D92249'>*</font></string>
    <string name="mandatory_confirm_password">Confirm Password<font fgcolor='#D92249'>*</font></string>
    <string name="update">update</string>
    <string name="continue_text">continue</string>
    <string name="send">Send</string>
    <string name="forgot_pwd_msg">"Click 'Send' button to receive update password link on your entered email address:"</string>
    <string name="error_completed">Start and complete one of the available reward to make it appear on this screen</string>
    <string name="error_payout">Request a payout to make it appear in this list</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="referEarn">Refer &amp; Earn</string>
    <string name="shareTo">Share via</string>
    <string name="yourRefCode">Your referral code</string>
    <string name="referString">Refer your friend &amp; get up to \n <b>100</b> referral coins!</string>
    <string name="somethingWentWrong">No Internet Connection !</string>
    <string name="referralError">Please login again to refer</string>
    <string name="textCopied">Copied !</string>
    <string name="shareAPP">Share the app</string>
    <string name="shareAppText">To Earn money in simple steps install this application</string>
    <string name="hours_left">hours left</string>
    <string name="hour_left">hour left</string>
    <string name="leaderBoard">Leaderboard</string>
    <string name="rank">Rank</string>
    <string name="coins">Coins</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="name1">Name</string>
    <string name="referral1">Install Cent4Free from Play Store Using my Referral code</string>
    <string name="referral2">and get coins as bonus on completing the offers.\n\nWin exciting rewards with Cent4Free by performing following tasks:\n\n1) Installing Apps\n2) Completing Surveys\n3)Referring Your friends\n\nInstall Now!!"</string>
    <string name="mobile">Mobile*</string>
    <string name="button_text_q_d">Get Offer</string>
    <string name="update_available">Update Available !</string>
    <string name="older_version_text">You are using an older Version of Cent4Free,\n Kindly update the application and Enjoy our new Services !</string>
    <string name="astropay_note">Please Enter Amount To Redeem In Your Astropay Wallet</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="ent_amt">Enter Amount*</string>
    <string name="footnote_req_payout">Note : Please SignUp/Login to AstropPay before requesting payout to get your money easily.</string>
    <string name="click_astro">Click here to open</string>
</resources>