<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOtpHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:visibility="visible"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTermsCondition">

        <TextView
            android:id="@+id/txtOtpVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/metropolis_medium"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textAllCaps="false"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <com.poovam.pinedittextfield.SquarePinField
            android:id="@+id/squareField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/metropolis_medium"
            android:inputType="number"
            android:text="@null"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSelectHandle="@drawable/text_handle"
            android:textSize="16sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:cornerRadius="@dimen/_50sdp"
            app:fieldBgColor="@color/pink_600"
            app:fieldColor="@color/pink_600"
            app:fillerColor="@color/pink_600"
            app:highlightType="allFields"
            app:isCursorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOtpVerification"
            app:noOfFields="4" />

        <TextView
            android:id="@+id/txtSentCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="center"
            android:text="@string/we_have_sent_phone_number"
            android:textAllCaps="false"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_8ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/squareField">

        </TextView>

        <TextView
            android:id="@+id/txtEmailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="center"
            android:text="@null"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_8ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSentCode">

        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailId">

            <TextView
                android:id="@+id/txtReceiveCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/metropolis_regular"
                android:gravity="center"
                android:text="@string/didnt_receive_code"
                android:textAllCaps="false"
                android:textColor="@color/grey_500"
                android:textSize="@dimen/_8ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/txtResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/metropolis_medium"
                android:gravity="center"
                android:text="@string/resend"
                android:textAllCaps="false"
                android:textColor="@color/pink_600"
                android:textSize="@dimen/_9ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/txtReceiveCode"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtOtpTimeRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="center"
            android:text="@string/otp_time_remaining"
            android:textAllCaps="false"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_8ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clResend">

        </TextView>

        <TextView
            android:id="@+id/txtVerifyOtp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/curve_pink_600"
            android:fontFamily="@font/metropolis_bold"
            android:gravity="center"
            android:text="@string/verify_otp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOtpTimeRemaining">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>